# callcenter_repl

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: package.json
artifacts/api-server/src/: index.ts
artifacts/api-server/src/routes/: ai.ts  appointments.ts  auth.ts  dashboard.ts  doctors.ts  index.ts  patients.ts  tenants.ts  voice.ts
artifacts/healthcare/: index.html  package.json
artifacts/healthcare/.replit-artifact/: artifact.toml
artifacts/healthcare/src/: App.tsx  index.css  main.tsx
artifacts/healthcare/src/components/: layout.tsx
artifacts/healthcare/src/hooks/: use-auth.ts
artifacts/healthcare/src/pages/: ai-assistant.tsx  appointments.tsx  dashboard.tsx  doctors.tsx  login.tsx  patients.tsx  tenants.tsx  voice-call.tsx
artifacts/voice-agent/: README.md  agent.py  hospital_info.py  main.py  requirements.txt
artifacts/voice-agent/.replit-artifact/: artifact.edit.toml
artifacts/voice-agent/scripts/: transcribe.py  tts.py
attached_assets/: Pasted-Build-a-fully-functional-local-first-multi-tenant-AI-he_1779041478070.txt
lib/api-spec/: openapi.yaml
lib/db/: drizzle.config.ts
lib/db/src/: index.ts
lib/db/src/schema/: appointments.ts  doctors.ts  index.ts  patients.ts  tenants.ts  users.ts
