[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "pydub>=0.25.1",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
    "websockets>=16.0",
]
